<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.filip.alcocalco.PromileCalco">

    <EditText
        android:id="@+id/volumeEdit"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:digits="0123456789.,"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/millitersLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/millitersLabel"/>

    <TextView
        android:id="@+id/millitersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/ml"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentsEdit"
        app:layout_constraintLeft_toRightOf="@+id/volumeEdit"
        app:layout_constraintRight_toLeftOf="@+id/percentsEdit"/>

    <EditText
        android:id="@+id/percentsEdit"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="0123456789.,"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentsLabel"
        app:layout_constraintLeft_toRightOf="@+id/millitersLabel"
        app:layout_constraintRight_toLeftOf="@+id/percentsLabel"/>


    <TextView
        android:id="@+id/percentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/alc_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/addButton"
        app:layout_constraintLeft_toRightOf="@+id/percentsEdit"
        app:layout_constraintRight_toLeftOf="@+id/addButton"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:onClick="addDrink"
        android:text="@string/add"
        app:layout_constraintLeft_toRightOf="@+id/percentsLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/drinkListView"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentsEdit"/>

</android.support.constraint.ConstraintLayout>
